Attempt to fix compatibility with parallax scrolling on iOS devices in Safari.

--- a/main.css
+++ b/main.css
@@ -430,6 +430,7 @@ section:nth-of-type(2),
 section:nth-of-type(4) {
     background: url("skills.jpg");
     background-attachment: fixed;
+    -webkit-background-attachment: fixed;
     background-size: cover;
 }
 
@@ -445,6 +446,7 @@ aside.main {
 aside.main h1 {
     background: url("micahskills.jpg");
     background-attachment: fixed;
+    -webkit-background-attachment: fixed;
     background-size: cover;
     filter: grayscale(100%);
     padding: 4vw 2vw 2vw;
@@ -641,6 +643,7 @@ form textarea:hover {
     background: url("Angle 1.png");
     background-size: cover;
     background-attachment: fixed;
+    -webkit-background-attachment: fixed;
     background-position: center center;
 }
 
